--- a/comandos/templates/home.html
+++ b/comandos/templates/home.html
@@ -14,7 +14,9 @@
     
     {% if mensagem_recente %}
         {% if mensagem_recente.ultima %}
+        </div class="{% if mensagem_recente.tipo_mensagem == 'dica' %}dica{% elif mensagem_recente.tipo_mensagem == 'informacao' %}informacao{% endif %}"> 
             <p>{{ mensagem_recente.conteudo }} - Enviada em {{ mensagem_recente.dia_envio }} às {{ mensagem_recente.horario_envio }}</p>
+        </div>
             {% if mensagem_recente.mensagem_adicional %}
                 <p>Mensagem Adicional: {{ mensagem_recente.mensagem_adicional }}</p>
                 <audio controls autoplay>
@@ -23,7 +25,9 @@
                 </audio>
             {% endif %}
         {% else %}
+     <div class="{% if mensagem_recente.tipo_mensagem == 'dica' %}dica{% elif mensagem_recente.tipo_mensagem == 'informacao' %}informacao{% endif %}"> 
             <p>{{ mensagem_recente.conteudo }} - Enviada em {{ mensagem_recente.dia_envio }} às {{ mensagem_recente.horario_envio }}</p>
+     </div>
         {% endif %}
     {% else %}
         <p id="mensagem">Ainda e cedo quegueiro, volte e descançe um pouco mais.</p>
