--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,9 +83,6 @@ h2{
     max-width: 500px;
 }
 
-
-@media (max-width: 600px) {
-}
 li{
     margin: 10px 10px;
     height: 40px;
@@ -95,4 +92,16 @@ p{
     height: 40px;
     line-height: 40px;
     margin: 0px 10px;
+}
+
+@media (max-width: 600px) {
+    .dividir1{
+        width: 400px;
+    }
+    .dividir2{
+        width: 400px;
+    }
+    #minhaImagem{
+        max-width: 300px;
+    }
 }
