--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,6 +109,7 @@ h2{
 }
 #minhaImagem{
     max-width: 500px;
+    max-height: 500px;
 }
 li{
     margin: 10px 10px;
@@ -128,6 +129,10 @@ p{
     flex-direction: column;
     justify-content: center;
 
+
+}
+audio{
+    width: 400px;
 
 }
 
