--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,6 +159,12 @@ audio{
         input{
             width: 300px;
         }
+        audio{
+            width: 300px;
+            height: 50px;
+        
+        }
+        
     }
     
 }
