--- a/comandos/templates/home.html
+++ b/comandos/templates/home.html
@@ -33,7 +33,7 @@
      </div>
         {% endif %}
     {% else %}
-        <p id="mensagem">Ainda e cedo quegueiro, volte e descançe um pouco mais.</p>
+        <p id="mensagem">Rápido demais, guerreiro! Suas respostas ainda estão em outra dimensão.</p>
     {% endif %}
 
     <h2>Histórico de Mensagens</h2>
